--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <table>        
         <tr id="l0">
-            <td onclick="selecionar()" class="preta a"></td>
+            <td class="preta a"></td>
             <td class="b"></td>
             <td class="preta c"></td>
             <td class="d"></td>
